Tested functionality to merge two sorted list with std::lower_bound.

--- a/modules/_containers/CMakeLists.txt
+++ b/modules/_containers/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/map)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vector)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/unordered-set)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/forward-list)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/list)
