--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 option(BUILD_WITH_BOOST "Build project with boost libraries" ON)
 option(WITH_LOGGER "Build project with logger support" ON)
-option(WITH_CPP17 "Build project cpp17 library" ON)
 
 include(PCHSupport)
 include(CRTLinkage)
@@ -68,14 +67,13 @@ set(SPDLOG_INCLUDE_DIRS ${EXTERNAL_DIRECTORY}/spdlog/include)
 # logger ##################################################
 
 if(WITH_LOGGER)
-	set(LOGGER_Libraries logger)
-	set(LOGGER_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/modules/logger/include)
+	set(Logger_Libraries logger)
 	add_subdirectory(modules/logger)
 endif()
 
-add_subdirectory(modules/_algorithms)
+# add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_bits)
-add_subdirectory(modules/_binders)
+# add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
 # add_subdirectory(modules/_design-patterns)
@@ -84,7 +82,7 @@ add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_template)
 # add_subdirectory(modules/_interface)
 # add_subdirectory(modules/_file_io)
-add_subdirectory(modules/_containers)
+# add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
 # add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
@@ -119,16 +117,12 @@ add_subdirectory(modules/_containers)
 # add_subdirectory(modules/ref-qualifier)
 # add_subdirectory(modules/constexpr)
 # add_subdirectory(modules/arithmetic_type_conversion)
-add_subdirectory(modules/_stl_re-implementation)
+add_subdirectory(modules/struct_bindings)
+add_subdirectory(modules/optional)
+# add_subdirectory(modules/_stl_re-implementation)
 
 # add_subdirectory(modules/safe_string_functions)
 # add_subdirectory(modules/str_hex_to_int)
 # add_subdirectory(modules/simple_nearest)
 # add_subdirectory(modules/simple_number)
 # add_subdirectory(modules/xy_line_coordinate)
-
-if(WITH_CPP17)
-	set(CPP17_Libraries cpp17)
-	add_subdirectory(modules/cpp17)
-	add_subdirectory(modules/cpp17_console)
-endif()
