--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,9 +117,10 @@ endif()
 # add_subdirectory(modules/ref-qualifier)
 # add_subdirectory(modules/constexpr)
 # add_subdirectory(modules/arithmetic_type_conversion)
-add_subdirectory(modules/struct_bindings)
-add_subdirectory(modules/optional)
+# add_subdirectory(modules/struct_bindings)
+# add_subdirectory(modules/optional)
 # add_subdirectory(modules/_stl_re-implementation)
+add_subdirectory(modules/override)
 
 # add_subdirectory(modules/safe_string_functions)
 # add_subdirectory(modules/str_hex_to_int)
