Tested static variable with singleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ endif()
 # add_subdirectory(modules/_lambda)
 # add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
-# add_subdirectory(modules/_static)
+add_subdirectory(modules/_static)
 # add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_rtti)
 # add_subdirectory(modules/_condition_var)
@@ -120,7 +120,7 @@ endif()
 # add_subdirectory(modules/struct_bindings)
 # add_subdirectory(modules/optional)
 # add_subdirectory(modules/_stl_re-implementation)
-add_subdirectory(modules/override)
+# add_subdirectory(modules/override)
 
 # add_subdirectory(modules/safe_string_functions)
 # add_subdirectory(modules/str_hex_to_int)
