--- a/modules/_static/CMakeLists.txt
+++ b/modules/_static/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(PROPERTY_FOLDER "_static")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/enum_to_string)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/var_in_function)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/static_var_singleton)
