1. Tested uninitialized enum. 2. Main CMakeLists refactoring.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,44 +86,43 @@ endif()
 # add_subdirectory(modules/_lambda)
 # add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
-add_subdirectory(modules/_static)
+# add_subdirectory(modules/_static)
 # add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_rtti)
 # add_subdirectory(modules/_condition_var)
 # add_subdirectory(modules/_exception)
+# add_subdirectory(modules/_stl_re-implementation)
 
-
+# add_subdirectory(modules/atexit)
+# add_subdirectory(modules/assert)
 # add_subdirectory(modules/atomic)
-# add_subdirectory(modules/tuple)
-# add_subdirectory(modules/iterator)
-# add_subdirectory(modules/replace)
-# add_subdirectory(modules/rotate)
 # add_subdirectory(modules/auto-type)
+# add_subdirectory(modules/arithmetic_type_conversion)
+# add_subdirectory(modules/brute_force)
+# add_subdirectory(modules/constexpr)
 # add_subdirectory(modules/chrono)
 # add_subdirectory(modules/class-definitions)
-# add_subdirectory(modules/assert)
-# add_subdirectory(modules/atexit)
+# add_subdirectory(modules/calculator)
+add_subdirectory(modules/enum)
 # add_subdirectory(modules/function_pointer)
 # add_subdirectory(modules/friend_function)
-# add_subdirectory(modules/brute_force)
-# add_subdirectory(modules/calculator)
 # add_subdirectory(modules/goto)
 # add_subdirectory(modules/himself_reference)
+# add_subdirectory(modules/iterator)
 # add_subdirectory(modules/operator_overloading)
+# add_subdirectory(modules/optional)
+# add_subdirectory(modules/override)
+# add_subdirectory(modules/replace)
+# add_subdirectory(modules/rotate)
 # add_subdirectory(modules/random)
 # add_subdirectory(modules/regex)
-# add_subdirectory(modules/unnamed_arguments)
 # add_subdirectory(modules/reference-wrapper)
 # add_subdirectory(modules/ref-qualifier)
-# add_subdirectory(modules/constexpr)
-# add_subdirectory(modules/arithmetic_type_conversion)
-# add_subdirectory(modules/struct_bindings)
-# add_subdirectory(modules/optional)
-# add_subdirectory(modules/_stl_re-implementation)
-# add_subdirectory(modules/override)
-
 # add_subdirectory(modules/safe_string_functions)
 # add_subdirectory(modules/str_hex_to_int)
 # add_subdirectory(modules/simple_nearest)
 # add_subdirectory(modules/simple_number)
+# add_subdirectory(modules/struct_bindings)
+# add_subdirectory(modules/tuple)
+# add_subdirectory(modules/unnamed_arguments)
 # add_subdirectory(modules/xy_line_coordinate)
