Added structural patterns sample: flyweight and decorator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.11.4)
+cmake_minimum_required(VERSION 3.13.1)
 
 project(cpp_samples)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 option(BUILD_WITH_BOOST "Build project with boost libraries" ON)
-option(WITH_LOGGER "Build project with logger support" ON)
+option(WITH_LOGGER "Build project with logger support" OFF)
 
 include(PCHSupport)
 include(CRTLinkage)
@@ -76,7 +76,7 @@ endif()
 # add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
-# add_subdirectory(modules/_design-patterns)
+add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
 # add_subdirectory(modules/_functional)
 # add_subdirectory(modules/_template)
@@ -103,7 +103,7 @@ endif()
 # add_subdirectory(modules/chrono)
 # add_subdirectory(modules/class-definitions)
 # add_subdirectory(modules/calculator)
-add_subdirectory(modules/enum)
+# add_subdirectory(modules/enum)
 # add_subdirectory(modules/function_pointer)
 # add_subdirectory(modules/friend_function)
 # add_subdirectory(modules/goto)
