--- a/modules/_design-patterns/CMakeLists.txt
+++ b/modules/_design-patterns/CMakeLists.txt
@@ -2,4 +2,5 @@ set(PROPERTY_FOLDER "_design-patterns")
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/behavioral)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/creational)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/structural)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/impl_declaration)
