Added test project to convert binary nubmer to decimal one.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,11 +72,11 @@ if(WITH_LOGGER)
 endif()
 
 # add_subdirectory(modules/_algorithms)
-# add_subdirectory(modules/_bits)
+add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
-add_subdirectory(modules/_design-patterns)
+# add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
 # add_subdirectory(modules/_functional)
 # add_subdirectory(modules/_template)
