--- a/modules/_bits/CMakeLists.txt
+++ b/modules/_bits/CMakeLists.txt
@@ -1,2 +1,5 @@
+set(PROPERTY_FOLDER "_bits")
+
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/header)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/operations)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bin2decimal)
