--- a/modules/_design-patterns/structural/CMakeLists.txt
+++ b/modules/_design-patterns/structural/CMakeLists.txt
@@ -1,3 +1,3 @@
 set(PROPERTY_FOLDER "${PROPERTY_FOLDER}/structural")
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/flyweight_decorator)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/flyweight_decorator_state)
