Added union sample.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(cpp_samples)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 option(BUILD_WITH_BOOST "Build project with boost libraries" ON)
-option(WITH_LOGGER "Build project with logger support" OFF)
+option(WITH_LOGGER "Build project with logger support" ON)
 
 include(PCHSupport)
 include(CRTLinkage)
@@ -72,11 +72,11 @@ if(WITH_LOGGER)
 endif()
 
 # add_subdirectory(modules/_algorithms)
-# add_subdirectory(modules/_bits)
+add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
-add_subdirectory(modules/_design-patterns)
+# add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
 # add_subdirectory(modules/_functional)
 # add_subdirectory(modules/_template)
@@ -104,6 +104,7 @@ add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/class-definitions)
 # add_subdirectory(modules/calculator)
 # add_subdirectory(modules/enum)
+add_subdirectory(modules/union)
 # add_subdirectory(modules/function_pointer)
 # add_subdirectory(modules/friend_function)
 # add_subdirectory(modules/goto)
