Use logger library with bit operation sample.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,6 @@ add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
 # add_subdirectory(modules/_static)
-# add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_rtti)
 # add_subdirectory(modules/_condition_var)
 # add_subdirectory(modules/_exception)
@@ -104,7 +103,7 @@ add_subdirectory(modules/_bits)
 # add_subdirectory(modules/class-definitions)
 # add_subdirectory(modules/calculator)
 # add_subdirectory(modules/enum)
-add_subdirectory(modules/union)
+# add_subdirectory(modules/union)
 # add_subdirectory(modules/function_pointer)
 # add_subdirectory(modules/friend_function)
 # add_subdirectory(modules/goto)
