Implement stack container with const time to retrieve minimum value.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ if(WITH_LOGGER)
 endif()
 
 # add_subdirectory(modules/_algorithms)
-add_subdirectory(modules/_bits)
+# add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
@@ -82,7 +82,7 @@ add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_template)
 # add_subdirectory(modules/_interface)
 # add_subdirectory(modules/_file_io)
-# add_subdirectory(modules/_containers)
+add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
 # add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
