--- a/modules/_containers/map/CMakeLists.txt
+++ b/modules/_containers/map/CMakeLists.txt
@@ -29,7 +29,7 @@ add_executable(${PROJECT_NAME}
 	# )
 target_link_libraries(${PROJECT_NAME}
 	PRIVATE
-		${LOGGER_Libraries}
+		${Logger_Libraries}
 		)
 add_definitions(
 	-DUNICODE
