1. Stack with functionality to retrieve minimum value for O(1) was moved into separate header. 2. Added `Queue` container to with functionality to retrieve minimum value for const time O(1) 3. Printer functionality was moved into separate header 4. Added QueuePrinter remplate function.

--- a/modules/_containers/stack/CMakeLists.txt
+++ b/modules/_containers/stack/CMakeLists.txt
@@ -2,6 +2,11 @@ project(stack)
 
 set(PROJECT_HEADERS
 	)
+set(MINFORCONSTTIME_HEADERS
+	include/min-for-const-time/Stack.h
+	include/min-for-const-time/Queue.h
+	include/min-for-const-time/Printer.h
+	)
 set(PROJECT_RESOURCES
 	)
 set(PROJECT_SOURCES
@@ -13,20 +18,23 @@ set(MISC
 	)
 
 source_group("Header Files" FILES ${PROJECT_HEADERS})
+source_group("Header Files\\Min-for-const-time" FILES ${MINFORCONSTTIME_HEADERS})
 source_group("Resource Files" FILES ${PROJECT_RESOURCES})
 source_group("Source Files" FILES ${PROJECT_SOURCES})
 source_group("" FILES ${MISC})
 
 add_executable(${PROJECT_NAME}
+	${MINFORCONSTTIME_HEADERS}
 	${PROJECT_SOURCES}
 	${PROJECT_HEADERS}
 	${MISC}
 	)
 
-# target_include_directories(${PROJECT_NAME}
-	# PRIVATE
-		# include
-	# )
+target_include_directories(${PROJECT_NAME}
+	PRIVATE
+		include
+		include/min-for-const-time
+	)
 target_link_libraries(${PROJECT_NAME}
 	PRIVATE
 		${Logger_Libraries}
