--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ endif()
 # add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_binders)
+add_subdirectory(modules/_deitel_tasks)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
 # add_subdirectory(modules/_design-patterns)
