dynamic_cast samples refactoring.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,11 +88,11 @@ add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
 # add_subdirectory(modules/_static)
-# add_subdirectory(modules/_rtti)
 # add_subdirectory(modules/_condition_var)
 # add_subdirectory(modules/_exception)
 # add_subdirectory(modules/_stl_re-implementation)
 
+add_subdirectory(modules/dynamic_cast)
 # add_subdirectory(modules/atexit)
 # add_subdirectory(modules/assert)
 # add_subdirectory(modules/atomic)
