Tested functionality to use polymorphism with reference to polymorphic object.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,8 +81,9 @@ add_subdirectory(modules/_deitel_tasks)
 # add_subdirectory(modules/_tasks)
 # add_subdirectory(modules/_functional)
 # add_subdirectory(modules/_template)
-# add_subdirectory(modules/_interface)
 # add_subdirectory(modules/_file_io)
+add_subdirectory(modules/_polymorphism)
+add_subdirectory(modules/_virtual_inheritance)
 add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
 # add_subdirectory(modules/_move-semantic)
