--- a/modules/_polymorphism/employee/CMakeLists.txt
+++ b/modules/_polymorphism/employee/CMakeLists.txt
@@ -4,13 +4,16 @@ set(PROJECT_HEADERS
 	include/Manager.h
 	include/Employee.h
 	)
+
 set(PROJECT_RESOURCES
 	)
+
 set(PROJECT_SOURCES
 	src/main.cpp
 	src/Manager.cpp
 	src/Employee.cpp
 	)
+
 set(MISC
 	src/pch.h
 	src/pch.cpp
@@ -27,15 +30,15 @@ add_executable(${PROJECT_NAME}
 	${MISC}
 	)
 
-add_precompiled_headers(${PROJECT_NAME} "src/")
-
 include_directories(
 	include
 	)
+
 add_definitions(
 	-DUNICODE
 	-D_UNICODE
 	)
 
-set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "_interface")
+add_precompiled_headers(${PROJECT_NAME} "src/")
+set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${PROPERTY_FOLDER})
 #set_target_properties(${PROJECT_NAME} PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
