--- a/modules/_polymorphism/virtual-output-function/CMakeLists.txt
+++ b/modules/_polymorphism/virtual-output-function/CMakeLists.txt
@@ -1,39 +1,45 @@
 project(virtual-output-function)
 
-include(PCHSupport)
-include(CRTLinkage)
-
 set(PROJECT_SOURCES
 	src/main.cpp
 	src/ClassA.cpp
 	src/ClassB.cpp
 	)
+
+set(PROJECT_RESOURCES
+	)
+
 set(PROJECT_HEADERS
 	include/IClass.h
 	include/ClassA.h
 	include/ClassB.h
 	)
-	
+
 set(MISC
 	src/pch.h
 	src/pch.cpp
 	)
-	
+
+source_group("Header Files" FILES ${PROJECT_HEADERS})
+source_group("Resource Files" FILES ${PROJECT_RESOURCES})
+source_group("Source Files" FILES ${PROJECT_SOURCES})
+source_group("" FILES ${MISC})
+
 add_executable(${PROJECT_NAME}
 	${PROJECT_SOURCES}
 	${PROJECT_HEADERS}
 	${MISC}
 	)
-	
-add_precompiled_headers(${PROJECT_NAME} "src/")
 
-include_directories(include
+include_directories(
+	include
 	)
-	
+
 add_definitions(
 	-DUNICODE
 	-D_UNICODE
 	)
 
-set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "_interface")
+add_precompiled_headers(${PROJECT_NAME} "src/")
+set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${PROPERTY_FOLDER})
 #set_target_properties(${PROJECT_NAME} PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
