--- a/modules/dynamic_cast/CMakeLists.txt
+++ b/modules/dynamic_cast/CMakeLists.txt
@@ -30,5 +30,5 @@ add_definitions(
 	-D_UNICODE
 	)
 
-set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${PROPERTY_FOLDER})
+# set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${PROPERTY_FOLDER})
 # set_target_properties(${PROJECT_NAME} PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
