Added sample program to convert decimal base number to binary.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,8 @@ endif()
 # add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_binders)
-add_subdirectory(modules/_deitel_tasks)
+add_subdirectory(modules/_base_conversion)
+# add_subdirectory(modules/_deitel_tasks)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
 # add_subdirectory(modules/_design-patterns)
@@ -82,18 +83,18 @@ add_subdirectory(modules/_deitel_tasks)
 # add_subdirectory(modules/_functional)
 # add_subdirectory(modules/_template)
 # add_subdirectory(modules/_file_io)
-add_subdirectory(modules/_polymorphism)
-add_subdirectory(modules/_virtual_inheritance)
-add_subdirectory(modules/_containers)
+# add_subdirectory(modules/_polymorphism)
+# add_subdirectory(modules/_virtual_inheritance)
+# add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
 # add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
 # add_subdirectory(modules/_static)
-add_subdirectory(modules/_condition_var)
+# add_subdirectory(modules/_condition_var)
 # add_subdirectory(modules/_exception)
 # add_subdirectory(modules/_stl_re-implementation)
 
-add_subdirectory(modules/dynamic_cast)
+# add_subdirectory(modules/dynamic_cast)
 # add_subdirectory(modules/atexit)
 # add_subdirectory(modules/assert)
 # add_subdirectory(modules/atomic)
