base conversion sample has been written.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,6 @@ endif()
 # add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_binders)
-add_subdirectory(modules/_base_conversion)
 # add_subdirectory(modules/_deitel_tasks)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
@@ -93,6 +92,7 @@ add_subdirectory(modules/_base_conversion)
 # add_subdirectory(modules/_condition_var)
 # add_subdirectory(modules/_exception)
 # add_subdirectory(modules/_stl_re-implementation)
+add_subdirectory(modules/base_conversion)
 
 # add_subdirectory(modules/dynamic_cast)
 # add_subdirectory(modules/atexit)
