--- a/modules/base_conversion/CMakeLists.txt
+++ b/modules/base_conversion/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(decimal2bin)
+project(base_conversion)
 
 set(PROJECT_SOURCES
 	src/main.cpp
@@ -20,8 +20,6 @@ source_group("Source Files" FILES ${PROJECT_SOURCES})
 source_group("Header Files" FILES ${PROJECT_HEADERS})
 source_group("" FILES ${MISC})
 
-add_precompiled_headers(${PROJECT_NAME} "src/")
-
 include_directories(
 	include
 	)
@@ -29,6 +27,8 @@ add_definitions(
 	-DUNICODE
 	-D_UNICODE
 	)
+
+add_precompiled_headers(${PROJECT_NAME} "src/")
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${PROPERTY_FOLDER})
 #set_target_properties(${PROJECT_NAME} PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
