thread_local has been tested.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ endif()
 # add_subdirectory(modules/_memory)
 # add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
+add_subdirectory(modules/_thread)
 # add_subdirectory(modules/_functional)
 # add_subdirectory(modules/_template)
 # add_subdirectory(modules/_file_io)
@@ -89,12 +90,10 @@ endif()
 # add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
 # add_subdirectory(modules/_static)
-# add_subdirectory(modules/_condition_var)
 # add_subdirectory(modules/_exception)
 # add_subdirectory(modules/_stl_re-implementation)
 
 add_subdirectory(modules/base_conversion)
-add_subdirectory(modules/thread)
 # add_subdirectory(modules/dynamic_cast)
 # add_subdirectory(modules/atexit)
 # add_subdirectory(modules/assert)
