Incorrect logger library path.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,14 +72,14 @@ if(WITH_LOGGER)
 endif()
 
 # add_subdirectory(modules/_algorithms)
-# add_subdirectory(modules/_bits)
+add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_deitel_tasks)
 # add_subdirectory(modules/_idioms)
 # add_subdirectory(modules/_memory)
 # add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
-add_subdirectory(modules/_thread)
+# add_subdirectory(modules/_thread)
 # add_subdirectory(modules/_functional)
 # add_subdirectory(modules/_template)
 # add_subdirectory(modules/_file_io)
@@ -93,7 +93,7 @@ add_subdirectory(modules/_thread)
 # add_subdirectory(modules/_exception)
 # add_subdirectory(modules/_stl_re-implementation)
 
-add_subdirectory(modules/base_conversion)
+# add_subdirectory(modules/base_conversion)
 # add_subdirectory(modules/dynamic_cast)
 # add_subdirectory(modules/atexit)
 # add_subdirectory(modules/assert)
