--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,7 @@ endif()
 # add_subdirectory(modules/_virtual_inheritance)
 # add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
-# add_subdirectory(modules/_move-semantic)
+add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
 # add_subdirectory(modules/_static)
 # add_subdirectory(modules/_exception)
