--- a/modules/_move-semantic/CMakeLists.txt
+++ b/modules/_move-semantic/CMakeLists.txt
@@ -1,3 +1,3 @@
 set(PROPERTY_FOLDER "_move-semantic")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/move-forward)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/overloading)
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/overloading)
