--- a/modules/_algorithms/CMakeLists.txt
+++ b/modules/_algorithms/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(PROPERTY_FOLDER "_algorithms")
 
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/accumulate)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bubble_sort)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fibonacci)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sort_algorithms)
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fibonacci)
 #add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/binary_heap)
 #add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/binary_tree)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/copy)
