--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_tasks)
 # add_subdirectory(modules/_thread)
 # add_subdirectory(modules/_functional)
-# add_subdirectory(modules/_template)
+add_subdirectory(modules/_template)
 # add_subdirectory(modules/_file_io)
 # add_subdirectory(modules/_polymorphism)
 # add_subdirectory(modules/_virtual_inheritance)
