--- a/modules/_template/CMakeLists.txt
+++ b/modules/_template/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/array-size)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/model)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/internal-type)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lock-and-call)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/template_param)
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/array-size)
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/model)
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/internal-type)
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lock-and-call)
