simple virtual inheritance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ add_subdirectory(modules/_algorithms)
 add_subdirectory(modules/_template)
 # add_subdirectory(modules/_file_io)
 # add_subdirectory(modules/_polymorphism)
-# add_subdirectory(modules/_virtual_inheritance)
+add_subdirectory(modules/_virtual)
 # add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
 add_subdirectory(modules/_move-semantic)
