--- a/modules/_virtual/clock_inheritance/CMakeLists.txt
+++ b/modules/_virtual/clock_inheritance/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(clock)
+project(clock_inheritance)
 
 set(PROJECT_HEADERS
 	include/Clock.h
@@ -6,20 +6,12 @@ set(PROJECT_HEADERS
 	include/WindowBorder.h
 	include/WindowMenu.h
 	)
-
 set(PROJECT_RESOURCES
 	)
-
-set(PROJECT_SOURCES
-	src/Clock.cpp
+set(PROJECT_SOURCES	
 	src/main.cpp
-	src/WindowBorder.cpp
-	src/WindowMenu.cpp
 	)
-
 set(MISC
-	src/pch.h
-	src/pch.cpp
 	)
 
 source_group("Header Files" FILES ${PROJECT_HEADERS})
@@ -41,7 +33,5 @@ add_definitions(
 	-DUNICODE
 	-D_UNICODE
 	)
-
-add_precompiled_headers(${PROJECT_NAME} "src/")
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${PROPERTY_FOLDER})
 #set_target_properties(${PROJECT_NAME} PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
