containers on unix build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 if (UNIX)
+	# Set C++ standard whose features
+	set(CMAKE_CXX_STANDARD 17)
 	message(STATUS "Host is Unix like: ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_VERSION}")
 else()
 	cmake_minimum_required(VERSION 3.13.1)
@@ -89,7 +91,7 @@ add_subdirectory(modules/_template)
 # add_subdirectory(modules/_file_io)
 # add_subdirectory(modules/_polymorphism)
 add_subdirectory(modules/_virtual)
-# add_subdirectory(modules/_containers)
+add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
 add_subdirectory(modules/_move-semantic)
 # add_subdirectory(modules/_type-traits)
