--- a/modules/_containers/list/CMakeLists.txt
+++ b/modules/_containers/list/CMakeLists.txt
@@ -8,8 +8,6 @@ set(PROJECT_SOURCES
 	src/main.cpp
 	)
 set(MISC
-	src/pch.h
-	src/pch.cpp
 	)
 
 source_group("Header Files" FILES ${PROJECT_HEADERS})
@@ -24,18 +22,16 @@ add_executable(${PROJECT_NAME}
 	)
 
 # target_include_directories(${PROJECT_NAME}
-	# PRIVATE
-		# include
-	# )
-target_link_libraries(${PROJECT_NAME}
-	PRIVATE
-		${Logger_Libraries}
-		)
+# 	PRIVATE
+# 		include
+# 	)
+# target_link_libraries(${PROJECT_NAME}
+# 	PRIVATE
+# 		${Logger_Libraries}
+# 		)
 add_definitions(
 	-DUNICODE
 	-D_UNICODE
 	)
-
-add_precompiled_headers(${PROJECT_NAME} "src/")
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${PROPERTY_FOLDER})
 #set_target_properties(${PROJECT_NAME} PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
