std function with lambda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
 # add_subdirectory(modules/_thread)
-# add_subdirectory(modules/_functional)
+add_subdirectory(modules/_functional)
 add_subdirectory(modules/_template)
 # add_subdirectory(modules/_file_io)
 # add_subdirectory(modules/_polymorphism)
