--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 if (UNIX)
 	# Set C++ standard whose features
+	set(CMAKE_CXX_FLAGS -pthread)
 	set(CMAKE_CXX_STANDARD 17)
 	message(STATUS "Host is Unix like: ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_VERSION}")
 else()
@@ -85,7 +86,7 @@ add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_memory)
 # add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
-# add_subdirectory(modules/_thread)
+add_subdirectory(modules/_thread)
 add_subdirectory(modules/_functional)
 add_subdirectory(modules/_template)
 # add_subdirectory(modules/_file_io)
