--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ add_subdirectory(modules/_virtual)
 add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
 add_subdirectory(modules/_move-semantic)
+add_subdirectory(modules/_mydatastructure)
 # add_subdirectory(modules/_type-traits)
 # add_subdirectory(modules/_static)
 # add_subdirectory(modules/_exception)
