--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_deitel_tasks)
 # add_subdirectory(modules/_idioms)
-# add_subdirectory(modules/_memory)
+add_subdirectory(modules/_memory)
 # add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
 add_subdirectory(modules/_thread)
