--- a/modules/_mydatastructure/CMakeLists.txt
+++ b/modules/_mydatastructure/CMakeLists.txt
@@ -1,2 +1,3 @@
 set(PROPERTY_FOLDER "_mydatastructute")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/myvector)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mylist)
