--- a/modules/_mydatastructure/myforwardlist/CMakeLists.txt
+++ b/modules/_mydatastructure/myforwardlist/CMakeLists.txt
@@ -2,6 +2,7 @@ project(myforwarlist)
 
 set(PROJECT_SOURCES
     src/main.cpp
+    src/myforwarlistutil.cpp
     )
 
 add_executable(${PROJECT_NAME}
