circular list display, cleanup

--- a/modules/_mydatastructure/CMakeLists.txt
+++ b/modules/_mydatastructure/CMakeLists.txt
@@ -2,3 +2,4 @@ set(PROPERTY_FOLDER "_mydatastructute")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/myvector)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mylist)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/myforwardlist)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mycircularlist)
