--- a/modules/_thread/CMakeLists.txt
+++ b/modules/_thread/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(PROPERTY_FOLDER "_thread")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/condition_var)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deadlock)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thread_local)
