play with condition variable

--- a/modules/_thread/CMakeLists.txt
+++ b/modules/_thread/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(PROPERTY_FOLDER "_thread")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/condition_var)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/condition_var1)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deadlock)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thread_local)
