type conversion vol1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ add_subdirectory(modules/_mydatastructure)
 # add_subdirectory(modules/assert)
 # add_subdirectory(modules/atomic)
 # add_subdirectory(modules/auto-type)
-# add_subdirectory(modules/arithmetic_type_conversion)
+add_subdirectory(modules/arithmetic_type_conversion)
 # add_subdirectory(modules/brute_force)
 # add_subdirectory(modules/constexpr)
 # add_subdirectory(modules/chrono)
