Adapt build script for using with vc16

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ else()
 	cmake_minimum_required(VERSION 3.13.1)
 	list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-	option(BUILD_WITH_BOOST "Build project with boost libraries" ON)
-	option(WITH_LOGGER "Build project with logger support" ON)
+	option(BUILD_WITH_BOOST "Build project with boost libraries" OFF)
+	option(WITH_LOGGER "Build project with logger support" OFF)
 
 	include(PCHSupport)
 	include(CRTLinkage)
@@ -78,25 +78,26 @@ else()
 	endif()
 endif()
 
-add_subdirectory(modules/_algorithms)
+# add_subdirectory(modules/_algorithms)
 # add_subdirectory(modules/_bits)
 # add_subdirectory(modules/_binders)
 # add_subdirectory(modules/_deitel_tasks)
 # add_subdirectory(modules/_idioms)
-add_subdirectory(modules/_memory)
+# add_subdirectory(modules/_memory)
 # add_subdirectory(modules/_design-patterns)
 # add_subdirectory(modules/_tasks)
-add_subdirectory(modules/_thread)
-add_subdirectory(modules/_functional)
-add_subdirectory(modules/_template)
-add_subdirectory(modules/_recursion)
+# add_subdirectory(modules/_thread)
+# add_subdirectory(modules/_functional)
+# add_subdirectory(modules/_template)
+# add_subdirectory(modules/_recursion)
 # add_subdirectory(modules/_file_io)
 # add_subdirectory(modules/_polymorphism)
-add_subdirectory(modules/_virtual)
-add_subdirectory(modules/_containers)
+# add_subdirectory(modules/_virtual)
+# add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
-add_subdirectory(modules/_move-semantic)
+# add_subdirectory(modules/_move-semantic)
 add_subdirectory(modules/_mydatastructure)
+add_subdirectory(modules/_mylinearalgebra)
 # add_subdirectory(modules/_type-traits)
 # add_subdirectory(modules/_static)
 # add_subdirectory(modules/_exception)
@@ -108,7 +109,7 @@ add_subdirectory(modules/_mydatastructure)
 # add_subdirectory(modules/assert)
 # add_subdirectory(modules/atomic)
 # add_subdirectory(modules/auto-type)
-add_subdirectory(modules/arithmetic_type_conversion)
+# add_subdirectory(modules/arithmetic_type_conversion)
 # add_subdirectory(modules/brute_force)
 # add_subdirectory(modules/constexpr)
 # add_subdirectory(modules/chrono)
@@ -139,5 +140,5 @@ add_subdirectory(modules/arithmetic_type_conversion)
 # add_subdirectory(modules/unnamed_arguments)
 # add_subdirectory(modules/xy_line_coordinate)
 
-add_subdirectory(modules/solid_principles)
-add_subdirectory(modules/array)
+# add_subdirectory(modules/solid_principles)
+# add_subdirectory(modules/array)
