--- a/modules/_mylinearalgebra/gaussian_elimination/CMakeLists.txt
+++ b/modules/_mylinearalgebra/gaussian_elimination/CMakeLists.txt
@@ -7,3 +7,10 @@ set(PROJECT_SOURCES
 add_executable(${PROJECT_NAME}
     ${PROJECT_SOURCES}
     )
+
+if (WIN32)
+	target_compile_options(${PROJECT_NAME}
+		PRIVATE
+			/Qpar /Qpar-report:1 /Qvec-report:1
+		)
+endif()
